@@ -1,3 +1,7 @@
+2015-11-27  Carl Hetherington  <cth@carlh.net>
+
+	* Fix download of some Doremi certificates (#763).
+
 2015-11-27  c.hetherington  <cth@carlh.net>
 
 	* Updated de_DE translation from Carsten Kurz.
